2010-12-06  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Beth Dakin.

        CSS animation doesn't work for border-radius
        https://bugs.webkit.org/show_bug.cgi?id=48340

        Include CSSPropertyBorderRadius in the list of shorthand
        properties, so that the individual border-radius properties
        get animated.

        Test: transitions/border-radius-transition.html

        * page/animation/AnimationBase.cpp:
        (WebCore::addShorthandProperties):

Canonical link: https://commits.webkit.org/63839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73421 268f45cc-cd09-0410-ab3c-d52691b4dbfc