WebCore/page/animation/AnimationBase.cpp
@@ -734,6 +734,7 @@ static void addShorthandProperties()
         CSSPropertyBorderColor, 
         CSSPropertyBorderWidth,
         CSSPropertyBorder,
+        CSSPropertyBorderRadius,
         CSSPropertyBorderSpacing,
         CSSPropertyMargin,
         CSSPropertyOutline,
