LayoutTests/transitions/transition-test-helpers.js
@@ -168,7 +168,9 @@ function runTest(expected, usePauseAPI)
 
         // We can only use the transition fast-forward mechanism if DRT implements pauseTransitionAtTimeOnElementWithId()
         if (hasPauseTransitionAPI && usePauseAPI) {
-            layoutTestController.pauseTransitionAtTimeOnElementWithId(property, time, elementId);
+            var paused = layoutTestController.pauseTransitionAtTimeOnElementWithId(property, time, elementId);
+            if (!paused)
+              window.console.log("Failed to pause '" + property + "' transition on element '" + elementId + "'");
             checkExpectedValue(expected, i);
         } else {
             if (time > maxTime)
